# advent-of-code

./: .gitignore  README.md  format  pyproject.toml  setup
advent_of_code/: api.py  download_tests.py  run.py  runners.py  solver.py  types.py
advent_of_code/2019/python/: 01.py  02.py  03.py  04.py  05.py  06.py
advent_of_code/2019/rust/: Cargo.toml
advent_of_code/2019/tests/: 01.yml  02.yml  03.yml  04.yml  05.yml  06.yml
advent_of_code/2020/: 01.py  02.py  03.py  04.py  05.py  06.py
advent_of_code/2020/cpp/: 01.cpp  utils.h
advent_of_code/2020/python/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py
advent_of_code/2020/rust/: Cargo.toml
advent_of_code/2020/tests/: 01.yml  02.yml  03.yml  04.yml  05.yml  06.yml  07.yml
advent_of_code/2021/python/: 01.py  02.py  03.py
advent_of_code/2021/tests/: 01.yml  02.yml  03.yml
advent_of_code/2022/: 01.py  02.py  03.py  04.py  08.py  10.py  12.py  13.py  16.py  17.py  18.py  19.py  20.py  23.py  24.py  25.py
advent_of_code/2022/python/: 05.py  06.py  07.py  09.py  11.py  14.py  15.py  16.py  19.py  21.py  22.py
advent_of_code/2023/: 01.py  06.py  11.py  13.py  15.py  16.py  20.py  25.py
advent_of_code/2023/python/: 03.py  14.py  17.py  18.cpp  23.py  (+1 more)
advent_of_code/2024/rust/: Cargo.toml
advent_of_code/2024/rust/src/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  18.rs  19.rs
aoc/: api.py  download_tests.py  generate.py  problem.py  run.py  utils.py
aoc/2020/: 06.py
aoc/2022/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
aoc/2023/: 00.py  01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py
scripts/: prepare  run
(+114 files in other folders)
