[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Svetoslav Karaivanov <first_name.second_name@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.11.0"
isort = "^5.12.0"
tqdm = "^4.66.1"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
