[project]
name = "advent_of_code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "requests>=2.32.5",
    "tqdm>=2.32.5",
    "isort>=2.32.5",
    "black>=2.32.5",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
]

[tool.setuptools]
py-modules = ["advent_of_code"]
